// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KryptosKit (oct) from auto b64 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "d8e83070-b906-5540-9933-01fe89037168",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto b64 2`] = `
{
  "alg": "HS512",
  "iat": 1704096000,
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "d8e83070-b906-5540-9933-01fe89037168",
  "kty": "oct",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto b64 3`] = `
{
  "algorithm": "HS512",
  "id": "d8e83070-b906-5540-9933-01fe89037168",
  "privateKey": "diYnyceZxmn18xGjVobBEwOSj2QOavHfv_tWGNuBpjND572Pa3qD8PDqDSrvoLtLOWyHdQ5lsmsuEIDcPgbPKp92HfNkawbKpCsVNBpoTlbZ-5jewLMREoGje9_pQzGSPLgh-cAkwtcrLUJNbwbyMGMlXmIJXeGukWsD6BfOAimNzPIyLf8QYMJYL9tzf16X4mQ1SvU76Y8Mqop6wz8ylAET7xWTivI-iOK8Zk1MiiomJww5w47Uz7X6Ha_uz7ctCESsyYMef9ZnYlsqwsHPrnP78ihyiv8cH7obubKJ6HkmsCnSTBOchDYxnmQiVZffuMSb8pScaIK6Vfef_1c7Vg",
  "publicKey": "",
  "type": "oct",
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto jwk 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "5c42d670-5db6-5bef-8093-a8e18a89d6c4",
  "isActive": true,
  "isExpired": false,
  "isExternal": true,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto jwk 2`] = `
{
  "alg": "HS512",
  "iat": 1704096000,
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "5c42d670-5db6-5bef-8093-a8e18a89d6c4",
  "kty": "oct",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto jwk 3`] = `
{
  "alg": "HS512",
  "k": "tt8sKlXAatelhbSo_IZgvyFzIiKPOKhv-IZTqAEkCkJZPVrO5PK9hb1NH9m9bJXa1nGmqlEVCjzsA1lwYsA2clgUvjQ3QlL3x7yDxzZqReg2x_W4XezFU2fBsGdsD2u-CW5FJ3WJZPsSDG5zOsARCdjvIyDiNO1Ryb-MRb0LWxcvsDdzNPIJNTf5adhf4Qsf5ZIWhvnSF5y9fglB6QRcskgwdRfGoYjjkiw3-h5UDrUnjzCPLQ7GVhq2gg_OyZJsduwTVYGObpAG6EYplvQZjNAWyekHivXfpc556jNTWCzfmAyZvvucsGIM5wuupicfn7AbA1a50fuppCyMwbBKSg",
  "kid": "5c42d670-5db6-5bef-8093-a8e18a89d6c4",
  "kty": "oct",
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto pem 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "737b2dcd-f6d0-5535-86f0-956ecfa8b983",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto pem 2`] = `
{
  "alg": "HS512",
  "iat": 1704096000,
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "737b2dcd-f6d0-5535-86f0-956ecfa8b983",
  "kty": "oct",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from auto pem 3`] = `
{
  "algorithm": "HS512",
  "id": "737b2dcd-f6d0-5535-86f0-956ecfa8b983",
  "privateKey": "-----BEGIN OCT PRIVATE KEY-----
ts4FwuyVlXJqw2ruyxbpzRpkknqiZicDS02J2YjfX+FwZ423Q42E0T/AKYkVXHNW
uD8Gi0aKMYytagkT7qJx3PsFCgDND01mXOg8pDhXv1n1Cbl8JxavKwbx87QCZ9Bm
PlUCPWDU8khZ/djxbtK/Hdl7ehFnk3KoFsEYphydCFhdI29UaURoj1ZNDV08Psnu
iqBCE9DgYc58QHaGRmpct9ORyYOJ4o+7jOD45cxeKZubVq4HIifiXk724DGP4M1/
crSKuYK1lddiniPwv/nnl0DAxI8/5Vz8NGXvGoJFaltQiZmKMC8y5O74DvIDknS3
cvQHzpn+t5VXn6eD+7A74Q==
-----END OCT PRIVATE KEY-----",
  "type": "oct",
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from b64 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "d8e83070-b906-5540-9933-01fe89037168",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from b64 2`] = `
{
  "alg": "HS512",
  "iat": 1704096000,
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "d8e83070-b906-5540-9933-01fe89037168",
  "kty": "oct",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from b64 3`] = `
{
  "algorithm": "HS512",
  "id": "d8e83070-b906-5540-9933-01fe89037168",
  "privateKey": "diYnyceZxmn18xGjVobBEwOSj2QOavHfv_tWGNuBpjND572Pa3qD8PDqDSrvoLtLOWyHdQ5lsmsuEIDcPgbPKp92HfNkawbKpCsVNBpoTlbZ-5jewLMREoGje9_pQzGSPLgh-cAkwtcrLUJNbwbyMGMlXmIJXeGukWsD6BfOAimNzPIyLf8QYMJYL9tzf16X4mQ1SvU76Y8Mqop6wz8ylAET7xWTivI-iOK8Zk1MiiomJww5w47Uz7X6Ha_uz7ctCESsyYMef9ZnYlsqwsHPrnP78ihyiv8cH7obubKJ6HkmsCnSTBOchDYxnmQiVZffuMSb8pScaIK6Vfef_1c7Vg",
  "publicKey": "",
  "type": "oct",
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from jwk 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "5c42d670-5db6-5bef-8093-a8e18a89d6c4",
  "isActive": true,
  "isExpired": false,
  "isExternal": true,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from jwk 2`] = `
{
  "alg": "HS512",
  "iat": 1704096000,
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "5c42d670-5db6-5bef-8093-a8e18a89d6c4",
  "kty": "oct",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from jwk 3`] = `
{
  "alg": "HS512",
  "k": "tt8sKlXAatelhbSo_IZgvyFzIiKPOKhv-IZTqAEkCkJZPVrO5PK9hb1NH9m9bJXa1nGmqlEVCjzsA1lwYsA2clgUvjQ3QlL3x7yDxzZqReg2x_W4XezFU2fBsGdsD2u-CW5FJ3WJZPsSDG5zOsARCdjvIyDiNO1Ryb-MRb0LWxcvsDdzNPIJNTf5adhf4Qsf5ZIWhvnSF5y9fglB6QRcskgwdRfGoYjjkiw3-h5UDrUnjzCPLQ7GVhq2gg_OyZJsduwTVYGObpAG6EYplvQZjNAWyekHivXfpc556jNTWCzfmAyZvvucsGIM5wuupicfn7AbA1a50fuppCyMwbBKSg",
  "kid": "5c42d670-5db6-5bef-8093-a8e18a89d6c4",
  "kty": "oct",
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from pem 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "737b2dcd-f6d0-5535-86f0-956ecfa8b983",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from pem 2`] = `
{
  "alg": "HS512",
  "iat": 1704096000,
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "737b2dcd-f6d0-5535-86f0-956ecfa8b983",
  "kty": "oct",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from pem 3`] = `
{
  "algorithm": "HS512",
  "id": "737b2dcd-f6d0-5535-86f0-956ecfa8b983",
  "privateKey": "-----BEGIN OCT PRIVATE KEY-----
ts4FwuyVlXJqw2ruyxbpzRpkknqiZicDS02J2YjfX+FwZ423Q42E0T/AKYkVXHNW
uD8Gi0aKMYytagkT7qJx3PsFCgDND01mXOg8pDhXv1n1Cbl8JxavKwbx87QCZ9Bm
PlUCPWDU8khZ/djxbtK/Hdl7ehFnk3KoFsEYphydCFhdI29UaURoj1ZNDV08Psnu
iqBCE9DgYc58QHaGRmpct9ORyYOJ4o+7jOD45cxeKZubVq4HIifiXk724DGP4M1/
crSKuYK1lddiniPwv/nnl0DAxI8/5Vz8NGXvGoJFaltQiZmKMC8y5O74DvIDknS3
cvQHzpn+t5VXn6eD+7A74Q==
-----END OCT PRIVATE KEY-----",
  "type": "oct",
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from utf 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "19a58ae7-b62c-51be-8bd5-cc417002cee4",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from utf 2`] = `
{
  "alg": "HS512",
  "iat": 1704096000,
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "19a58ae7-b62c-51be-8bd5-cc417002cee4",
  "kty": "oct",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) from utf 3`] = `
{
  "algorithm": "HS512",
  "id": "19a58ae7-b62c-51be-8bd5-cc417002cee4",
  "privateKey": "I-KCrCEuYWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXouQUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVouMDEyMzQ1Njc4OQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
  "publicKey": "",
  "type": "oct",
  "use": "sig",
}
`;

exports[`KryptosKit (oct) generate auto 1`] = `
{
  "algorithm": "HS384",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (oct) generate enc 1`] = `
{
  "algorithm": "dir",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": "A256GCM",
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "encrypt",
    "decrypt",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "enc",
}
`;

exports[`KryptosKit (oct) generate sig 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": null,
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "hidden": false,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "purpose": null,
  "type": "oct",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;
